--- a/css/02_css선택자2.css
+++ b/css/02_css선택자2.css
@@ -52,10 +52,103 @@ code{
     #parent2 p { background-color: salmon;}
     #parent2 div p { color: blue;}
 
+    /* 반응선택자 */
+    .test-div {
+        border: 3px solid black ;
+
+        width: 200px; height: 200px;
+        
+        /* 배경색 : #ddd(16진수) */
+        background-color: #ddd; 
+
+        /* 아래쪽 요소와 30px 만큼 간격 추가 */
+        margin-bottom: 30px ;
+
+        /* 마우스 커서를 손가락 모양으로 */
+        cursor: pointer;
+
+    }
+
+    #activeBox:active{
+        background-color: yellow;
+    }
+
+    /* hoverBox에 마우스가 올라왔을 때 */
+    #hoverBox:hover{
+        background-image: url(../images/cats/cat5.jpg); /* 배경 이미지 설정 */
+        background-size: cover; /* 배경 이미지 크기 설정 */
+    }
+    #hoverBox1:hover{
+        background-image: url(../images/cats/cat5.jpg); /* 배경 이미지 설정 */
+        background-size: cover; /* 배경 이미지 크기 설정 */
+    }
 
 
+    /* --------- 상태 선택자 ------------ */
+    /* :focus */
+    #input1:focus {
+        /* 요소의 기본 테두리 */
+        border-color: red;
+
+        /* 초점이 맞춰졌을 때 요소 바깥에 생기는 선 */
+        outline-color: greenyellow;
+    }
+
+    #input1 {
+        border-color: red;
+    }
+
+    #input2:checked {
+        width: 300px;
+        height: 300px;
+        background-color: red;
+        /* radio, checkbox 선택 시 보이는 표시는 배경이 아닌 이미지이므로 배경색 적용되지 않는다 */
+    
+    }
+
+    /* :enabled, / :disabled */
+    .input3:enabled{background-color: skyblue;}
+    .input3:disabled{background-color: lightcoral;}
 
 
+    /* ----------- 동위 선택자 ----------- */
 
+    /* + 바로 뒤 형제 요소 하나 */
 
+    #div1 + div{
+        background-color: green;
+    }
 
+    /* ~ 뒤에 존재하는 형제요소 중 일치하는 요소 모두 선택 */
+
+    #div3 ~ div {
+        background-color: springgreen;
+    }
+
+    /* ----------- 체크박스 만들기 ----------- */
+
+    /* 1. label 요소를 체크박스 모양으로 만들기 */
+    #check + label{
+        width: 30px; height: 30px;
+        border: 1px solid black;
+
+        display : inline-block; /* 크기지정이 가능, 한 줄에 배치(수평분. inline) */
+
+        cursor: pointer; /* 마우스 포인터 모양을 손가락으로 바꾸는 것 */
+
+        border-radius: 20%;
+
+        user-select: none; /* 사용자가 선택을 못하게 함 */
+    }
+
+    /* 2. checkbox 체크되었을 때 label에 체크박스 이미지 표시 */
+    #check:checked  + label{
+        background-image: url('../images/checkbox.png');
+        background-size: cover; /* 배경 이미지 크기를 요소에 맞춤 설정 */
+    }
+
+    /* 3. 체크박스를 존재는 하지만 보이지 않게 처리 */
+    #check{
+        display: none; /* 표시하지 않겠다 */
+    }
+    
