오전 3교시 카드 형태 요소를 모아둔 행에서 각 카드의 크기가 변하지 않도록 하는 object-fit: 속성에 대한 학습

--- a/css/15_웹페이지만들기.css
+++ b/css/15_웹페이지만들기.css
@@ -183,3 +183,110 @@ main{
     font-size: 24px;
     font-weight: bold;
 }
+
+/* 메인 내용 */
+/* 메인 내용 */
+/* 메인 내용 */
+
+.content-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    min-width: 800px;
+    max-width: 1440px;
+
+    margin: auto; /* 좌우 가운데 정렬 */
+}
+
+/* 내용행 */
+.content-row{
+    /* 높이 지정 없으면 내부 콘텐트에 작성되는 요소에 따라 크기가 맞춰짐 */
+    border: 1px solid var(--main-color);
+    border-radius: 20px; /* 테두리 모서리 둥글게 */
+    padding: 30px; /* 껍데기와 내용 칸의 간격 */
+    margin: 20px; /* 다른 껍데기와의 간격 */
+
+    display: flex;
+}
+
+/* thumbnail-col, thumbnail */
+/* thumbnail-col, thumbnail */
+/* thumbnail-col, thumbnail */
+
+/* 썸네일 열 */
+.thumbnail-col{
+    width: 400px;
+    flex-shrink: 0; 
+}
+
+/* 섬네일 이미지 */
+.thumbnail{
+    width: 100%;
+    height: auto; /* width 비율에 맞게 자동으로 height를 조정한다 */
+}
+
+/* 설명 열 */
+.description-col{
+    flex-grow: 1; /* 화면에따라 팽창, 축소 */
+    padding: 20px;
+    margin: 0 30px;
+}
+
+/* 제목 */
+.description-col>h1:hover{
+    text-decoration: underline;
+}
+
+.description-col>hr{
+    margin: 20px 0;
+}
+
+/* 내용 */
+.description-col > p {
+    font-size: 20px;
+
+    /* white-space : 텍스트 요소에서 공백을 처리하는 방법 설정 */
+    /* pre : 작성된 텍스트 모양 그대로 출력(pre 태그 처럼) */
+    /* pre-wrap : pre + 텍스트가 요소의 너비를 초과하며 줄바꿈 */
+
+    white-space: pre-wrap;  /* 아주 많이 쓴다! */
+
+}
+
+/* 카드 */
+/* 카드 */
+/* 카드 */
+
+.card-container{
+/* 카드 다 만들고 나서 설정하자 */
+}
+
+/* 카드를 감싸는 요소 */
+.card-item{
+    flex-shrink: 0;
+    width: 25%;
+    min-width: 200px;
+    padding: 15px;
+}
+
+/* 카드(a)태그 */
+.card{
+    display: block ; /* 크기 조정 가능 */
+}
+
+/* 카드 썸네일 */
+.card-thumbnail-container{
+    height: 200px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid var(--main-color);
+}
+
+.card-thumbnail{
+    width: 100%;
+    height: 100%;
+
+    /* object-fit: 이미지 요소의 내용(진짜 이미지)의 크기를 조절 */
+    /* object-fit: cover; */
+    object-fit: contain;
+}
